Bug 22610 - Patch to add missing include in util/cairo-script/csi-replay.c
Summary: Patch to add missing include in util/cairo-script/csi-replay.c
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.9.2
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-03 16:06 UTC by Magnus Boman
Modified: 2009-07-04 00:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to add missing include (343 bytes, patch)
2009-07-03 16:06 UTC, Magnus Boman
Details | Splinter Review

Description Magnus Boman 2009-07-03 16:06:15 UTC
Created attachment 27371 [details] [review]
Patch to add missing include

string.h should be included in util/cairo-script/csi-replay.c for strcmp
Comment 1 Chris Wilson 2009-07-04 00:10:16 UTC
Pushed, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.